--- a/HTML Css Combined Assignment/Website-3/Mice.css
+++ b/HTML Css Combined Assignment/Website-3/Mice.css
@@ -12,6 +12,11 @@
   padding: 5px;
 }
 
+.current {
+  text-decoration: underline 3px solid orange;
+  color: rgb(255, 131, 22);
+}
+
 /* below this line is the search bar css */
 
 .search {
@@ -127,13 +132,15 @@
 /* below this line is the aside section css */
 
 aside {
-  width: 20%;
+  width: 70%;
   position: sticky;
   top: 0;
   left: 0;
   right: 0;
   background-color: white;
-  /* margin-top: -40rem; */
+  overflow: auto;
+  scrollbar-width: none;  
+  border-right: 1px solid black;
 }
 
 .container {
@@ -226,6 +233,28 @@ aside {
   flex-wrap: wrap;
   margin-left: 3rem;
   scrollbar-width: none;
+}
+
+.option {
+  background-color: #000;
+  color: white;
+  height: 3rem;
+  margin-bottom: 1rem;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.items:hover .option{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.option:hover {
+  background-color: #383737;
 }
 
 /* below is footer css */
