--- a/HTML Css Combined Assignment/Website-3/homePage.css
+++ b/HTML Css Combined Assignment/Website-3/homePage.css
@@ -12,6 +12,11 @@
   padding: 5px;
 }
 
+img:hover {
+transform: scale(1.05);
+overflow: hidden;
+}
+
 /* below this line is the search bar css */
 
 .search {
@@ -76,6 +81,7 @@
   right: 0;
   background-color: white;
   padding: 10px 0px 20px 0px;
+  z-index: 100;
 }
 
 /* below this line are the different categories css  */
