--- a/HTML Css Combined Assignment/Website-5/homepage.css
+++ b/HTML Css Combined Assignment/Website-5/homepage.css
@@ -112,6 +112,7 @@ body {
 
 .parts ul {
   padding: 1.5rem;
+  height: 100%;
 }
 
 .parts ul li {
@@ -142,13 +143,19 @@ body {
   background-color: #33C5FE;
 }
 
-.circle1 {
+.circle {
   border-radius: 50%;
   height: 2rem;
   width: 2rem;
   background-color: #A3BF4A;
-  position: absolute;
-  left: 8rem;
+  position: relative;
+  left: -1rem;
+  top: -1rem;
+}
+
+.yr-text {
+  position: relative;
+  left: -1rem;
 }
 
 .updated {
@@ -178,8 +185,11 @@ body {
   color: rgb(0, 229, 255);
 }
 
-.read-more h2 {
-  color: linear-gradient(60deg, #9DBF54, #4DC4D4);
+.read-more h3 {
+  background-image: linear-gradient(0deg, #9DBF54, #4DC4D4);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .posts {
