--- a/HTML-Css-Combined-Assignment/Website-6/artwork.css
+++ b/HTML-Css-Combined-Assignment/Website-6/artwork.css
@@ -6,12 +6,18 @@
 
 /* header section */
 
-.nav {  
+.nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 5rem;
-  margin: 0rem 5rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0 5rem;
+  background: #fff;
+  z-index: 1000;
 }
 
 .nav-middle ul {
@@ -48,6 +54,10 @@
   padding: .5rem 1.5rem;
   height: 2.2rem;
   border-radius: .2rem;
+}
+
+main {
+  margin-top: 5rem;
 }
 
 .hero {
@@ -250,6 +260,12 @@
 .bottom-section {
   border-top: 1px solid #ddd;
   padding-top: 25px;
+}
+
+.content {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
 }
 
 .collection-box {
